force-app/main/default/objects/Location__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>City for the property location.</description>
    <inlineHelpText>City is required for address validation.</inlineHelpText>
    <label>City</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>