force-app/main/default/objects/Location__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>Country where the property is located.</description>
    <inlineHelpText>Select the country for address validation and filtering.</inlineHelpText>
    <label>Country</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>USA</fullName><default>true</default><label>USA</label></value>
            <value><fullName>Germany</fullName><default>false</default><label>Germany</label></value>
            <value><fullName>China</fullName><default>false</default><label>China</label></value>
            <value><fullName>UK</fullName><default>false</default><label>UK</label></value>
            <value><fullName>Australia</fullName><default>false</default><label>Australia</label></value>
            <value><fullName>New Zealand</fullName><default>false</default><label>New Zealand</label></value>
            <value><fullName>Finland</fullName><default>false</default><label>Finland</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>