force-app/main/default/objects/Location__c/fields/Land_Mark__c.field-meta.xml
<CustomField>
    <fullName>Land_Mark__c</fullName>
    <description>Optional nearby landmark for easier property visits.</description>
    <inlineHelpText>Use a recognizable nearby landmark when useful.</inlineHelpText>
    <label>Land Mark</label>
    <type>TextArea</type>
</CustomField>