force-app/main/default/objects/Location__c/fields/Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code__c</fullName>
    <description>Postal code for the address.</description>
    <inlineHelpText>Postal code is required for address validation.</inlineHelpText>
    <label>Postal Code</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>