force-app/main/default/objects/Location__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>State, province, or region for the address.</description>
    <inlineHelpText>State or region is required for address validation.</inlineHelpText>
    <label>State</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>