force-app/main/default/objects/Location__c/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <description>Street address sent to address verification services.</description>
    <inlineHelpText>Enter the street address before verifying the location.</inlineHelpText>
    <label>Street</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>