force-app/main/default/objects/Location__c/fields/Verified__c.field-meta.xml
<CustomField>
    <fullName>Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates the address has been verified by an external gateway.</description>
    <inlineHelpText>Checked automatically or manually after address verification.</inlineHelpText>
    <label>Verified?</label>
    <type>Checkbox</type>
</CustomField>